--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,7 +1,20 @@
-.App {
-  text-align: center;
+html {
+  height: 100%;
 }
 
+body {
+  height: 100%;
+}
+
+#root {
+  height: 100%;
+}
+
+.App {
+  height: 100%;
+  background-color: #CCE4F6
+}
+/* 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -35,4 +48,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */ 
