--- a/frontend/src/modules/Main.module.css
+++ b/frontend/src/modules/Main.module.css
@@ -1,6 +1,17 @@
 .paper {
     width: 25rem;
-    height: 20rem;
-    padding: 2rem;
     margin-left: 4em;
+    font-weight: 300;
+    font-size: 2em;
+    padding: 3em 2em;
+}
+.songField {
+    margin-bottom: 1.5em;
+    font-weight: 300;
+}
+.selectField {
+    font-weight: 300;
+}
+.header {
+    font-size: 1.1em;
 }
