Added: CSRFToken handling logic

--- a/frontend/src/modules/Main.module.css
+++ b/frontend/src/modules/Main.module.css
@@ -1,11 +1,13 @@
 .paper {
     font-weight: 300;
-    font-size: 2em;
+    /* font-size: 2em; */
     padding: 3em 2em;
+    width: 25em;
 }
 .songField {
     margin-bottom: 1.5em;
     font-weight: 300;
+    width: 10em;
 }
 .selectField {
     font-weight: 300;
