--- a/frontend/src/modules/App.module.css
+++ b/frontend/src/modules/App.module.css
@@ -1,3 +1,3 @@
 .background {
-    background-color: #fff8e7;
+    background-image: linear-gradient( 109.6deg,  rgba(48,207,208,1) 11.2%, rgba(51,8,103,1) 92.5% );
 }
