--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -12,7 +12,7 @@ body {
 
 .App {
   height: 100%;
-  background-color: #fff8e7;
+  background-image: linear-gradient( 109.6deg,  rgba(48,207,208,1) 11.2%, rgba(51,8,103,1) 92.5% );
 }
 /* 
 .App-logo {
