--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,3 +11,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+@font-face {
+  font-family: Sansita;
+  src: local('Sansita'), url(/fonts/SansitaSwashed-VariableFont-wght.ttf)
+}
