--- a/frontend/src/modules/Header.module.css
+++ b/frontend/src/modules/Header.module.css
@@ -1,5 +1,6 @@
 .em {
     font-weight: bold;
-    font-size: 3rem;
-    font-style: italic;
+    font-size: 9rem;
+    color: white;
+    font-family: Sansita;
 }
